--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 dioxus = "0.4.3"
 dioxus-web = "0.4.3"
+wasm-logger = "0.2.0"
+wasm-bindgen = "0.2.78"
+log = "0.4.14"
+console_error_panic_hook = "*"
+im-rc = "15.0.0"
